Text wrap fixes and title box styling
Allow for bookmarks to be added without titles.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,18 +106,12 @@ html {
         height: 14rem;
         padding: auto;
         flex-direction: column;
+        align-self: center;
     }
     @media screen and (max-height: $tab) {
         width: 100%;
         height: clamp(3.2rem, 25vh, 80%);
         flex-direction: row;
-    }
-
-    * {
-         @media screen and (max-width: $desktop) { // for mobile devices
-            margin: 0;
-            align-self: center;
-         }
     }
 
     button {
@@ -138,20 +132,34 @@ html {
         text-align: start;
         padding-left: 1rem;
         margin-top: 0.5rem;
-        margin-bottom: 0.5rem;
-        height: fit-content;
+        padding-bottom: 0.5rem;
+        // height: fit-content;
+        max-height: 100%;
         width: 100%;
         font-size: 1.4rem;
         font-weight: 700;
         align-self: center;
+        text-overflow: ellipsis;
+        overflow: hidden;
+
         @media screen and (min-width: $desktop) and (min-height: $tab) {
             text-align: center;
             padding-left: 0rem;
-            height: 30%;
-            margin-top: 4rem;
+            padding-top: 1rem;
+            text-overflow:ellipsis;
+            // overflow-x: hidden;
+            margin-top: 2rem;
+            >div {
+                padding-right: 0.2rem;
+                padding-left: 0.2rem;
+                margin-top: 0.6rem;
+                text-overflow: ellipsis;
+                max-height: 1.5rem;
+                overflow: hidden;
+            }
         }
     
-        span {
+        .subtext {
             font-size: 0.8em;
             font-weight: 1;
         }
@@ -168,6 +176,13 @@ html {
         @media screen and (min-width: $desktop) and (min-height: $tab) {
             padding-right: 0rem;
         }
+
+        >* {
+        // @media screen and (max-width: $desktop) { // for mobile devices
+           margin: 0;
+           align-self: center;
+        // }
+   }
         
         .editURL {
             button {
@@ -187,15 +202,20 @@ html {
 
 
 .bottomBar {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     column-gap: 1.5rem;
     row-gap: 0.5rem;
-    padding: 0.5em;
+    padding: 0.5rem 0.5rem 0.5rem;
     margin-top: 0.2rem; /* trying to fix awkward scrollbar length */
     background-color: hsl(218, 50%, 15%);
     border-radius: 0.7rem 0.7rem 0rem 0rem;
+
+    .flex-container {
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 0.5rem;
+        column-gap: 1.5rem;
+    }
 
     input[type=url] {
         flex: 1 1 auto;
@@ -211,6 +231,12 @@ html {
         }
     }
 
+    input[type=text] {
+        @extend input[type=url];
+        margin-bottom: 0.5rem;
+        width: 35%;
+    }
+
     button {
         flex: 1 1 initial;
         font-size: 20px;
@@ -224,23 +250,23 @@ html {
     }
 }
 
+    /* scrollbar for modern webkit browsers */
+    ::-webkit-scrollbar {
+        width: auto;
+        margin-bottom: 2rem;
+    }
 
- /* scrollbar for modern webkit browsers */
- ::-webkit-scrollbar {
-    width: auto;
-    margin-bottom: 2rem;
-}
-
-    /* Scroll track */
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px hsl(0, 0%, 0%);
-    border-radius: 16px;
-  }
-  
-  /* Click Handle */
-  ::-webkit-scrollbar-thumb {
-    background: hsl(215, 58%, 6%);
-    border-radius: 16px;
-  }
+        /* Scroll track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px hsl(0, 0%, 0%);
+        border-radius: 16px;
+    }
+    
+    /* Click Handle */
+    ::-webkit-scrollbar-thumb {
+        background: hsl(215, 58%, 6%);
+        border-radius: 16px;
+    }
 /*--------------------------------*/
+
 
